feat: drag and db changes
