# back/docs/swagger.json
@@ -1398,6 +1398,17 @@
         }
     },
     "definitions": {
+        "enum.ModelPortDirection": {
+            "type": "string",
+            "enum": [
+                "in",
+                "out"
+            ],
+            "x-enum-varnames": [
+                "ModelPortDirectionIn",
+                "ModelPortDirectionOut"
+            ]
+        },
         "enum.ModelType": {
             "type": "string",
             "enum": [
@@ -1409,7 +1420,7 @@
                 "Coupled"
             ]
         },
-        "json.Connection": {
+        "json.ModelConnection": {
             "type": "object",
             "required": [
                 "from",
@@ -1424,25 +1435,14 @@
                 }
             }
         },
-        "json.ModelComponents": {
-            "type": "object",
-            "required": [
-                "id"
-            ],
-            "properties": {
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
         "json.ModelLink": {
             "type": "object",
             "required": [
-                "model",
+                "modelId",
                 "port"
             ],
             "properties": {
-                "model": {
+                "modelId": {
                     "type": "string"
                 },
                 "port": {
@@ -1483,11 +1483,15 @@
         "json.ModelPort": {
             "type": "object",
             "required": [
-                "id"
+                "id",
+                "type"
             ],
             "properties": {
                 "id": {
                     "type": "string"
+                },
+                "type": {
+                    "$ref": "#/definitions/enum.ModelPortDirection"
                 }
             }
         },
@@ -1554,11 +1558,11 @@
                 "id": {
                     "type": "string"
                 },
-                "model": {
-                    "$ref": "#/definitions/model.Model"
-                },
                 "modelId": {
                     "type": "string"
+                },
+                "modelType": {
+                    "$ref": "#/definitions/model.Model"
                 },
                 "name": {
                     "type": "string",
@@ -1591,7 +1595,7 @@
                 "id": {
                     "type": "string"
                 },
-                "models": {
+                "modelTypes": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model.Model"
@@ -1614,16 +1618,16 @@
                 "code": {
                     "type": "string"
                 },
-                "componentsJson": {
+                "components": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/json.ModelComponents"
+                        "$ref": "#/definitions/model.ModelComponent"
                     }
                 },
-                "connectionsJson": {
+                "connections": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/json.Connection"
+                        "$ref": "#/definitions/json.ModelConnection"
                     }
                 },
                 "createdAt": {
@@ -1641,19 +1645,13 @@
                 "libId": {
                     "type": "string"
                 },
-                "metadataJson": {
+                "metadata": {
                     "$ref": "#/definitions/json.ModelMetadata"
                 },
                 "name": {
                     "type": "string"
                 },
-                "portInJson": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/json.ModelPort"
-                    }
-                },
-                "portOutJson": {
+                "ports": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/json.ModelPort"
@@ -1666,6 +1664,21 @@
                     "type": "string"
                 },
                 "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.ModelComponent": {
+            "type": "object",
+            "required": [
+                "id",
+                "model"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "model": {
                     "type": "string"
                 }
             }
@@ -1699,7 +1712,7 @@
                         "$ref": "#/definitions/model.Library"
                     }
                 },
-                "models": {
+                "modelTypes": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model.Model"
@@ -1855,29 +1868,28 @@
             "type": "object",
             "required": [
                 "code",
-                "componentsJson",
-                "connectionsJson",
+                "components",
+                "connections",
                 "description",
-                "metadataJson",
+                "metadata",
                 "name",
-                "portInJson",
-                "portOutJson",
+                "ports",
                 "type"
             ],
             "properties": {
                 "code": {
                     "type": "string"
                 },
-                "componentsJson": {
+                "components": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/json.ModelComponents"
+                        "$ref": "#/definitions/model.ModelComponent"
                     }
                 },
-                "connectionsJson": {
+                "connections": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/json.Connection"
+                        "$ref": "#/definitions/json.ModelConnection"
                     }
                 },
                 "description": {
@@ -1886,19 +1898,13 @@
                 "libId": {
                     "type": "string"
                 },
-                "metadataJson": {
+                "metadata": {
                     "$ref": "#/definitions/json.ModelMetadata"
                 },
                 "name": {
                     "type": "string"
                 },
-                "portInJson": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/json.ModelPort"
-                    }
-                },
-                "portOutJson": {
+                "ports": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/json.ModelPort"
@@ -2134,29 +2140,28 @@
             "type": "object",
             "required": [
                 "code",
-                "componentsJson",
-                "connectionsJson",
+                "components",
+                "connections",
                 "description",
-                "metadataJson",
+                "metadata",
                 "name",
-                "portInJson",
-                "portOutJson",
+                "ports",
                 "type"
             ],
             "properties": {
                 "code": {
                     "type": "string"
                 },
-                "componentsJson": {
+                "components": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/json.ModelComponents"
+                        "$ref": "#/definitions/model.ModelComponent"
                     }
                 },
-                "connectionsJson": {
+                "connections": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/json.Connection"
+                        "$ref": "#/definitions/json.ModelConnection"
                     }
                 },
                 "description": {
@@ -2168,19 +2173,13 @@
                 "libId": {
                     "type": "string"
                 },
-                "metadataJson": {
+                "metadata": {
                     "$ref": "#/definitions/json.ModelMetadata"
                 },
                 "name": {
                     "type": "string"
                 },
-                "portInJson": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/json.ModelPort"
-                    }
-                },
-                "portOutJson": {
+                "ports": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/json.ModelPort"
