# back/request/model.go
@@ -3,6 +3,7 @@ package request
 import (
 	"app/enum"
 	"app/json"
+	"app/model"
 )
 
 type ModelRequest struct {
@@ -11,6 +12,8 @@ type ModelRequest struct {
 	Type        enum.ModelType         `json:"type" validate:"required"`
 	Description string                 `json:"description" validate:"required"`
 	Code        string                 `json:"code" validate:"required"`
-	Components  []InstanceModelRequest `json:"components" validate:"required"`
+	Components  []model.ModelComponent `json:"components" validate:"required"`
 	Ports       []json.ModelPort       `json:"ports" validate:"required"`
+	Metadata    json.ModelMetadata     `json:"metadata" validate:"required"`
+	Connections []json.ModelConnection `json:"connections" validate:"required"`
 }
