# back/response/model.go
@@ -7,27 +7,31 @@ import (
 )
 
 type ModelResponse struct {
-	ID          string           `json:"id"`
-	UserID      string           `json:"userId"`
-	LibID       *string          `json:"libId"`
-	Name        string           `json:"name" validate:"required"`
-	Type        enum.ModelType   `json:"type" validate:"required"`
-	Description string           `json:"description" validate:"required"`
-	Code        string           `json:"code" validate:"required"`
-	Components  []ModelResponse  `json:"components" validate:"required"`
-	Ports       []json.ModelPort `json:"ports" validate:"required"`
+	ID          string                 `json:"id"`
+	UserID      string                 `json:"userId"`
+	LibID       *string                `json:"libId"`
+	Name        string                 `json:"name" validate:"required"`
+	Type        enum.ModelType         `json:"type" validate:"required"`
+	Description string                 `json:"description" validate:"required"`
+	Code        string                 `json:"code" validate:"required"`
+	Components  []model.ModelComponent `json:"components" validate:"required"`
+	Ports       []json.ModelPort       `json:"ports" validate:"required"`
+	Metadata    json.ModelMetadata     `json:"metadata" validate:"required"`
+	Connections []json.ModelConnection `json:"connections" validate:"required"`
 }
 
-func CreateModelResponse(model model.Model) ModelResponse {
+func CreateModelResponse(m model.Model) ModelResponse {
 	return ModelResponse{
-		LibID:       model.LibID,
-		Name:        model.Name,
-		Description: model.Description,
-		Type:        model.Type,
-		Code:        model.Code,
-		UserID:      model.UserID,
-		ID:          model.ID,
-		Components:  model.Components,
-		Ports:       model.Ports,
+		ID:          m.ID,
+		UserID:      m.UserID,
+		LibID:       m.LibID,
+		Name:        m.Name,
+		Type:        m.Type,
+		Description: m.Description,
+		Code:        m.Code,
+		Ports:       m.Ports,
+		Components:  m.Components,
+		Connections: m.Connections,
+		Metadata:    m.Metadata,
 	}
 }
